--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ button[class~="audio"],
 .quiz-answer,
 .wand-quiz-answer,
 .answer-btn,
+.btn-normal,
 select,
 .audio-controls-button {
     border-color: var(--primary-color);
@@ -57,6 +58,7 @@ button[class~="audio"]:hover,
 .quiz-answer:hover,
 .wand-quiz-answer:hover,
 .answer-btn:hover,
+.btn-normal:hover,
 select:focus,
 .audio-controls-button:hover {
     background-color: var(--primary-color);
@@ -343,13 +345,13 @@ button[class~="shuffle-active"] {
     transition: background-color 0.3s ease;
 }
 
-.quiz-answer, .wand-quiz-answer, .answer-btn {
+.quiz-answer, .wand-quiz-answer, .answer-btn, .btn-normal {
     font-size: 1rem;
     cursor: var(--pointer-url) 4 4, pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
-.quiz-answer:hover, .wand-quiz-answer:hover, .answer-btn:hover {
+.quiz-answer:hover, .wand-quiz-answer:hover, .answer-btn:hover, .btn-normal:hover {
     transform: translateY(-2px);
 }
 
@@ -459,7 +461,7 @@ select#musicSelect:focus::-webkit-listbox {
         padding: 0.5rem;
         font-size: 0.85rem;
     }
-    .quiz-answer, .wand-quiz-answer, .answer-btn {
+    .quiz-answer, .wand-quiz-answer, .answer-btn, .btn-normal {
         font-size: 0.9rem;
         padding: 0.5rem;
     }
