--- a/style.css
+++ b/style.css
@@ -509,6 +509,7 @@ select#musicSelect:focus::-webkit-listbox {
 #restartPatronusQuiz,
 #restart-wand-quiz,
 #start-wand-quiz,
+#start-trivia-quiz,
 #try-wand,
 #continue-quiz,
 #reveal-wand,
@@ -533,6 +534,7 @@ select#musicSelect:focus::-webkit-listbox {
 #restartPatronusQuiz:hover,
 #restart-wand-quiz:hover,
 #start-wand-quiz:hover,
+#start-trivia-quiz:hover,
 #try-wand:hover,
 #continue-quiz:hover,
 #reveal-wand:hover,
@@ -550,6 +552,7 @@ select#musicSelect:focus::-webkit-listbox {
 #restartPatronusQuiz:active,
 #restart-wand-quiz:active,
 #start-wand-quiz:active,
+#start-trivia-quiz:active,
 #try-wand:active,
 #continue-quiz:active,
 #reveal-wand:active,
